# RAJ

./: .gitignore  README.md  pyproject.toml
data/: nfcorpus_qrel.jsonl
data/sample/: covid_generated_definition.txt  nfcorpus_generated_definition.txt  robust_generated_definiton.txt
prompt/: definition_generation_prompt.md  expertise_annotation_prompt.md  measure_doc_specialization_prompt.md  prompt_frame.py  prompt_parts.py  relevance_judgment_prompt.md
src/create_eval_dataset/: create_nfcorpus_qrel.py  main.py
src/dataset_handler/: BaseHandler.py  CovidHandler.py  NFCorpusHandler.py  RobustHandler.py
src/generate_definition/: create_batch_file.py  main.py
src/relevance_judgment/: evaluate.py  generate_batch_file.py
utils/: request.py
